--- a/src/main/webapp/pages/fabricantes.xhtml
+++ b/src/main/webapp/pages/fabricantes.xhtml
@@ -62,7 +62,7 @@
 				<h:panelGrid id="painel" columns="2">
 					<p:outputLabel for="descricao" value="Nome:" />
 					<p:inputText id="descricao" maxlength="50" size="30"
-						value="#{fabricanteBean.fabricante.descricao}" required="true"
+						value="#{fabricanteBean.fabricante.descricao}" converter="upperCaseConverter" required="true"
 						requiredMessage="O campo Descrição é obrigatório" />
 				</h:panelGrid>
 
