--- a/src/main/webapp/pages/cidades.xhtml
+++ b/src/main/webapp/pages/cidades.xhtml
@@ -71,13 +71,13 @@
 				<h:panelGrid id="painel" columns="2">
 					<p:outputLabel for="nome" value="Nome:" />
 					<p:inputText id="nome" maxlength="50" size="30"
-						value="#{cidadeBean.cidade.nome}" required="true"
+						value="#{cidadeBean.cidade.nome}" required="true" converter="upperCaseConverter"
 						requiredMessage="O campo 'Nome' é obrigatório" />
 
 					<p:outputLabel for="estado" value="Estado:" />
 					<p:selectOneMenu id="estado" filter="true"
 						value="#{cidadeBean.cidade.estado}"
-						converter="omnifaces.SelectItemsConverter" required="true"
+						converter="omnifaces.SelectItemsConverter" required="true" 
 						requiredMessage="O campo 'Estado' é obrigatório">
 						<f:selectItem noSelectionOption="true"
 							itemLabel="Selecione um estado" />
