--- a/src/main/webapp/pages/usuariosold.xhtml
+++ b/src/main/webapp/pages/usuariosold.xhtml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	template="/templates/modelo.xhtml">
-
-	<ui:define name="conteudo">
-		<h:form id="formListagem">
-		<p:panel header="#{msg.cabecalhoPainel}">
+	xmlns:p="http://primefaces.org/ui">
+<h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Usuários</title>
+</h:head>
+<h:body>
+	<p:growl id="mensagem" />
+	<h:form id="formListagem">
+		<p:panel header="Usuários - Listagem">
 			<p:dataTable id="tabela" emptyMessage="Nenhum registro encontrado."
 				paginator="true" value="#{usuarioBean.usuarios}" var="usuario"
 				rows="5">
 				<f:facet name="header">
-					<p:commandButton value="#{msg.botaoNovo}" oncomplete="PF('dialogo').show();"
+					<p:commandButton value="Novo" oncomplete="PF('dialogo').show();"
 						actionListener="#{usuarioBean.novo}"
 						update=":mensagem :formCadastro:painel">
 						<f:actionListener
@@ -23,7 +24,7 @@
 					</p:commandButton>
 				</f:facet>
 
-				<p:column headerText="#{msg.cabecalhoNome}" sortBy="#{usuario.pessoa.nome}"
+				<p:column headerText="Nome" sortBy="#{usuario.pessoa.nome}"
 					filterBy="#{usuario.pessoa.nome}">
 					<h:outputText value="#{usuario.pessoa.nome}" />
 				</p:column>
@@ -33,7 +34,9 @@
 					<h:outputText value="#{usuario.pessoa.cpf}" />
 				</p:column>
 
-				
+				<p:column headerText="Tipo" sortBy="#{usuario.tipoFormatado}">
+					<h:outputText value="#{usuario.tipoFormatado}" />
+				</p:column>
 
 				<p:column headerText="Ativo" sortBy="#{usuario.ativoFormatado}">
 					<h:outputText value="#{usuario.ativoFormatado}" />
@@ -71,9 +74,9 @@
 				<p:outputLabel for="tipo" value="Tipo:" />
 				<p:selectOneRadio id="tipo" value="#{usuarioBean.usuario.tipoUsuario}"
 					required="true" requiredMessage="O campo 'Tipo' ´obrigatório">
-					<f:selectItem itemValue="ADMINISTRADOR" itemLabel="Administrador" />
-					<f:selectItem itemValue="GERENTE" itemLabel="Gerente" />
-					<f:selectItem itemValue="BALCONISTA" itemLabel="Balconista" />
+					<f:selectItem itemValue="A" itemLabel="Administrador" />
+					<f:selectItem itemValue="G" itemLabel="Gerente" />
+					<f:selectItem itemValue="B" itemLabel="Balconista" />
 				</p:selectOneRadio>
 
 				<p:outputLabel for="ativo" value="Ativo:" />
@@ -90,8 +93,5 @@
 			</h:panelGrid>
 		</h:form>
 	</p:dialog>
-		
-		
-		
-</ui:define>
-</ui:composition>
+</h:body>
+</html>
