--- a/src/main/webapp/pages/produtos.xhtml
+++ b/src/main/webapp/pages/produtos.xhtml
@@ -49,7 +49,7 @@
 				</p:column>
 				
 				<p:column headerText="Foto">
-					<p:graphicImage cache="false" height="50" width="50" url="http://localhost:8080/uploads/#{produto.codigo}.png" />
+					<p:graphicImage cache="false" height="50" width="50" url="http://localhost:8080/Uploads/#{produto.codigo}.png" />
 				</p:column>
 
 				<p:column headerText="Opções">
