--- a/src/main/webapp/pages/historico.xhtml
+++ b/src/main/webapp/pages/historico.xhtml
@@ -9,56 +9,57 @@
 	template="/templates/modelo.xhtml">
 
 	<ui:define name="conteudo">
-			<h:form id="formulario">
-		<p:panel header="Histórico">
-			<h:panelGrid columns="3">
-				<p:outputLabel for="codigo" value="Código:" />
-				<p:inputText id="codigo" size="20" maxlength="13" required="true"
-					requiredMessage="O campo Código é obrigatório"
-					converterMessage="O valor informado no campo Código é inválido"
-					validatorMessage="Informe um valor entre 1 e 9999999999999 para o campo Código"
-					value="#{historicoBean.produto.codigo}">
-					<f:validateLongRange minimum="1" maximum="9999999999999" />
-				</p:inputText>
-				<p:commandButton icon="ui-icon-search"
-					update=":mensagem :formulario:painelDados"
-					actionListener="#{historicoBean.buscar}"
-					process="@this :formulario:codigo" />
-			</h:panelGrid>
-
-			<h:panelGroup id="painelDados" layout="block">
-				<h:panelGrid columns="2"
-					rendered="#{historicoBean.exibePainelDados}">
-					<p:outputLabel value="Descrição:" />
-					<h:outputText value="#{historicoBean.produto.descricao}" />
-
-					<p:outputLabel value="Preço:" />
-					<h:outputText value="#{historicoBean.produto.preco}">
-						<f:convertNumber locale="pt_BR" minFractionDigits="2" />
-					</h:outputText>
-
-					<p:outputLabel value="Quantidade:" />
-					<h:outputText value="#{historicoBean.produto.quantidade}" />
-
-					<p:outputLabel value="Fabricante:" />
-					<h:outputText value="#{historicoBean.produto.fabricante.descricao}" />
-
-					<p:outputLabel for="observacoes" value="Observações:" />
-					<p:inputTextarea id="observacoes" required="true"
-						requiredMessage="O campo Observações é obrigatório" rows="5"
-						cols="50" autoResize="false"
-						value="#{historicoBean.historico.observacoes}" />
+		<h:form id="formulario">
+			<p:panel header="Histórico">
+				<h:panelGrid columns="3">
+					<p:outputLabel for="codigo" value="Código:" />
+					<p:inputText id="codigo" size="20" maxlength="13" required="true"
+						requiredMessage="O campo Código é obrigatório"
+						converterMessage="O valor informado no campo Código é inválido"
+						validatorMessage="Informe um valor entre 1 e 9999999999999 para o campo Código"
+						value="#{historicoBean.produto.codigo}">
+						<f:validateLongRange minimum="1" maximum="9999999999999" />
+					</p:inputText>
+					<p:commandButton icon="ui-icon-search"
+						update=":mensagem :formulario:painelDados"
+						actionListener="#{historicoBean.buscar}"
+						process="@this :formulario:codigo" />
 				</h:panelGrid>
 
-				<h:panelGrid columns="1"
-					rendered="#{historicoBean.exibePainelDados}">
-					<p:commandButton value="Salvar"
-						actionListener="#{historicoBean.salvar}" update=":mensagem" />
-				</h:panelGrid>
-			</h:panelGroup>
-		</p:panel>
-	</h:form>		
-		
-	
-</ui:define>
+				<h:panelGroup id="painelDados" layout="block">
+					<h:panelGrid columns="2"
+						rendered="#{historicoBean.exibePainelDados}">
+						<p:outputLabel value="Descrição:" />
+						<h:outputText value="#{historicoBean.produto.descricao}" />
+
+						<p:outputLabel value="Preço:" />
+						<h:outputText value="#{historicoBean.produto.preco}">
+							<f:convertNumber locale="pt_BR" minFractionDigits="2" />
+						</h:outputText>
+
+						<p:outputLabel value="Quantidade:" />
+						<h:outputText value="#{historicoBean.produto.quantidade}" />
+
+						<p:outputLabel value="Fabricante:" />
+						<h:outputText
+							value="#{historicoBean.produto.fabricante.descricao}" />
+
+						<p:outputLabel for="observacoes" value="Observações:" />
+						<p:inputTextarea id="observacoes" required="true"
+							requiredMessage="O campo Observações é obrigatório" rows="5"
+							cols="50" autoResize="false"
+							value="#{historicoBean.historico.observacoes}" />
+					</h:panelGrid>
+
+					<h:panelGrid columns="1"
+						rendered="#{historicoBean.exibePainelDados}">
+						<p:commandButton value="Salvar"
+							actionListener="#{historicoBean.salvar}" update=":mensagem" />
+					</h:panelGrid>
+				</h:panelGroup>
+			</p:panel>
+		</h:form>
+
+
+	</ui:define>
 </ui:composition>
