--- a/src/main/webapp/pages/usuarios.xhtml
+++ b/src/main/webapp/pages/usuarios.xhtml
@@ -69,7 +69,7 @@
 				</p:password>
 
 				<p:outputLabel for="tipo" value="Tipo:" />
-				<p:selectOneRadio id="tipo" value="#{usuarioBean.usuario.tipoUsuario}"
+				<p:selectOneRadio id="tipo" value="#{usuarioBean.usuario.tipo}"
 					required="true" requiredMessage="O campo 'Tipo' ´obrigatório">
 					<f:selectItem itemValue="ADMINISTRADOR" itemLabel="Administrador" />
 					<f:selectItem itemValue="GERENTE" itemLabel="Gerente" />
