--- a/src/main/webapp/pages/funcionarios.xhtml
+++ b/src/main/webapp/pages/funcionarios.xhtml
@@ -42,7 +42,7 @@
 							actionListener="#{funcionarioBean.excluir}"
 							update=":mensagem :formListagem:tabela">
 							<p:confirm header="Confirmação"
-								message="Deseja excluir o cliente?" icon="ui-icon-alert" />
+								message="Deseja excluir o funcionário?" icon="ui-icon-alert" />
 							<f:attribute name="funcionarioSelecionada" value="#{funcionario}" />
 						</p:commandButton>
 
